--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="app_name">Hospital Management Application</string>
     <string name="navigationSignUp"><u>Not Registered Yet , Sign Up !</u></string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="type_your_email">Type your Email</string>
     <string name="forget_password">Forget Password?</string>
@@ -11,4 +10,5 @@
     <string name="welcome">Welcome</string>
     <string name="type_your_password">Type Your Password</string>
     <string name="todo">TODO</string>
+    <string name="item_label">Please select Government or Private</string>
 </resources>
